trying to fix an issue with the main nav wrapping on lower resolutions

--- a/skins/default/style.css
+++ b/skins/default/style.css
@@ -85,7 +85,7 @@ body {
 	height: 25px;
 	line-height: 25px;
 	margin: .5em 0 0 2em;
-	width: 60%;
+	width: auto;
 	
 	background: #000;
 }
